--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,12 +5,13 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
+saPanels=false
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
