#修改了两个主界面的相关控件的大小和位置等，并添加了部分滚动条，避免分辨率过小时无法查看所有控件的bug；+DetailMultiPageForm的雏形；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -263,6 +263,12 @@
     <Compile Include="MyForm\Multiplex\DetailMultiForm.Designer.cs">
       <DependentUpon>DetailMultiForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Multiplex\DetailMultiPageForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\DetailMultiPageForm.Designer.cs">
+      <DependentUpon>DetailMultiPageForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\Multiplex\DetailSingleForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -546,6 +552,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\DetailMultiForm.resx">
       <DependentUpon>DetailMultiForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Multiplex\DetailMultiPageForm.resx">
+      <DependentUpon>DetailMultiPageForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\DetailSingleForm.resx">
       <DependentUpon>DetailSingleForm.cs</DependentUpon>
