--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -415,6 +415,12 @@
     <Compile Include="MyForm\HardwareSet\HardwareSaveForm.Designer.cs">
       <DependentUpon>HardwareSaveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\OtherTools\RecordSetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\OtherTools\RecordSetForm.Designer.cs">
+      <DependentUpon>RecordSetForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\SkinMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -618,6 +624,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\HardwareSet\HardwareSaveForm.resx">
       <DependentUpon>HardwareSaveForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\OtherTools\RecordSetForm.resx">
+      <DependentUpon>RecordSetForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\SkinMainForm.resx">
       <DependentUpon>SkinMainForm.cs</DependentUpon>
