--- a/SpecialTools/SpecialTools.csproj
+++ b/SpecialTools/SpecialTools.csproj
@@ -74,5 +74,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="更新日志.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
