--- a/MultiLedController/CommonSet.ini
+++ b/MultiLedController/CommonSet.ini
@@ -4,3 +4,8 @@ version=3.1.0.1029
 interfaceCount=0
 spaceCount=0
 controllerCount=1
+[CommonSet4]
+version=4.0.0.1102
+interfaceCount=0
+spaceCount=0
+controllerCount=1
