--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -131,6 +131,12 @@
     <Compile Include="MyForm\MainForm1.Designer.cs">
       <DependentUpon>MainForm1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\MainForm4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MainForm4.Designer.cs">
+      <DependentUpon>MainForm4.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\NetworkForm1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MainForm3.resx">
       <DependentUpon>MainForm3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\MainForm4.resx">
+      <DependentUpon>MainForm4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\old\OldMainForm.resx">
       <DependentUpon>OldMainForm.cs</DependentUpon>
