--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -471,6 +471,8 @@
     </Compile>
     <Compile Include="PeripheralDevice\BaseCommunication.cs" />
     <Compile Include="PeripheralDevice\NetworkConnect.cs" />
+    <Compile Include="PeripheralDevice\OnlineConnect.cs" />
+    <Compile Include="PeripheralDevice\OnlineDeviceInfo.cs" />
     <Compile Include="PeripheralDevice\SerialConnect.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
