+++添加在线版连接

--- a/LightController/packages.config
+++ b/LightController/packages.config
@@ -6,6 +6,7 @@
   <package id="cef.redist.x64" version="83.3.12" targetFramework="net40" />
   <package id="cef.redist.x86" version="83.3.12" targetFramework="net40" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net40" />
+  <package id="fastJSON" version="2.3.5.2" targetFramework="net40" />
   <package id="FTD2XX.Net" version="1.0.14" targetFramework="net40" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net40" />
   <package id="log4net" version="1.2.10" targetFramework="net40" />
