--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -165,6 +165,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ast\Entity\ReturnDTO.cs" />
     <Compile Include="Ast\Enum\InsertMethod.cs" />
     <Compile Include="Ast\GroupAst.cs" />
     <Compile Include="Ast\LightWrapper.cs" />
@@ -172,6 +173,7 @@
     <Compile Include="Ast\MaterialIndexAst.cs" />
     <Compile Include="Common\DBGetter.cs" />
     <Compile Include="Common\DirectoryHelper.cs" />
+    <Compile Include="Common\HttpHelper.cs" />
     <Compile Include="Common\IniFileHelper.cs" />
     <Compile Include="Common\IniFileHelper_UTF8.cs" />
     <Compile Include="Common\MathHelper.cs" />
