--- a/RecordTools/RecordTools.csproj
+++ b/RecordTools/RecordTools.csproj
@@ -45,14 +45,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\MusicSceneConfig.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Utils\MathHelper.cs" />
+    <Compile Include="RecordSetForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="RecordSetForm.Designer.cs">
+      <DependentUpon>RecordSetForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="RecordSetForm.resx">
+      <DependentUpon>RecordSetForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
