+++添加录制工具配置全局配置文件

--- a/RecordTools/RecordTools.csproj
+++ b/RecordTools/RecordTools.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity\GlobalConfig.cs" />
     <Compile Include="Entity\MusicSceneConfig.cs" />
     <Compile Include="Dickov.Utils\IniFileHelper.cs" />
     <Compile Include="Dickov.Utils\MathHelper.cs" />
