--- a/RecordTools/RecordTools.csproj
+++ b/RecordTools/RecordTools.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dickov.Utils\TextHelper.cs" />
     <Compile Include="Entity\GlobalConfig.cs" />
     <Compile Include="Entity\MusicSceneConfig.cs" />
     <Compile Include="Dickov.Utils\IniFileHelper.cs" />
@@ -56,6 +57,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="FrameList.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="RecordSetForm.resx">
       <DependentUpon>RecordSetForm.cs</DependentUpon>
     </EmbeddedResource>
