@这是个大版本更新 -去掉本版本内冗余且用不到的几个Form（旧外设、旧灯库编辑、旧多步联调）； -直接删掉LightPic文件夹； #灯光图.png重新扣图，背景色透明； #优化内置灯具图片为动态由文件夹添加； #lightImageList成为公共组件；两个子Form的构造函数都需要主动把listView的LargeImageList设为此值； +RefreshImageList()方法； +OpenForm内打开目录有进行处理；只有真正打开其他目录的工程，才更新工作目录； +导出源工程时，会把工程内涉及的的灯具图片一并导出； +在软件目录下，可通过修改（如不存在添加）favicon.ico，动态更换软件窗体的图标；

--- a/SpecialTools/SpecialTools.csproj
+++ b/SpecialTools/SpecialTools.csproj
@@ -78,7 +78,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="更新日志.txt" />
+    <Content Include="更新日志.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="FrameList.txt">
