--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,11 +5,11 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
-softwareName=TRANS-JOY
+softwareName=
 useExportProject=true
 saPanels=false
 [SavePath]
