--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,9 +5,9 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=true
-testButton=false
+testButton=true
 hardwareUpdateButton=true
 softwareName=
 useExportProject=true
@@ -19,3 +19,4 @@ otherPath=C:\Temp
 maxStep=100
 maxStepSound=300
 maxStTimes=250
+waitTime=2000
