#重新加载灯具图片时，若该图片地址不存在于LightPic目录中，则仍显示为灯光图

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ skin=
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=true
 hardwareUpdateButton=true
@@ -19,4 +19,4 @@ otherPath=C:\Temp
 maxStep=100
 maxStepSound=300
 maxStTimes=250
-waitTime=2000
+waitTime=1000
