#重写《硬件配置界面》-去除冗余的代码：和维佳重复的轮子：从ini配置中读取ch值；-去除自动保存复选框；-save方法：因为与SaveAll功能重复；-其余无用的方法和变量；#优化《使用说明》； #修复IniFileHelper里面的一个BUG；SavePath不为当前目录而是GlobalSet.ini...

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -9,11 +9,11 @@ newMainForm=false
 useSkin=true
 testButton=true
 hardwareUpdateButton=true
-softwareName=
+softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 [SavePath]
-useAppPath=false
+useAppPath=true
 otherPath=C:\Temp
 [System]
 maxStep=100
