-readIniFile(string) ; #dhcp、mac取Trim()后再进行验证；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -13,7 +13,7 @@ softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 [SavePath]
-useAppPath=true
+useAppPath=false
 otherPath=C:\Temp
 [System]
 maxStep=100
