《灯库》#修复没有通道（新建）时，调试面板没有隐藏的BUG（某些客户可能会不按正常流程点击这些按键）；《灯控》-把MainFormBase的弃用方法，移到外面（有道云笔记）;+GlobalSet.ini添加unifyTd=true属性：统一设值时是否提示；#把几个界面的通道跳渐变设为DropDownList；+SkinMainForm的右键使用说明：更新日志；+基本完成输入A|S统一设值的功能：需多加测试；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -12,6 +12,7 @@ hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
+unifyTd=true
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
