<灯控>+TongdaoWrapper添加四个参数的构造函数；+添加ColorForm的雏形(主要代码已完成)；#NewMainForm去掉部分this和修改大写的Decimal为decimal；《SpecialTools》+工程内添加《使用说明.txt》

--- a/SpecialTools/SpecialTools.csproj
+++ b/SpecialTools/SpecialTools.csproj
@@ -78,6 +78,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="使用说明.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="更新日志.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
