+MainForm及GlobalSet添加Show.tdValues属性,在单步调试时，可以显示设置的通道的DMX512值；#ColorForm，分离预览和单步预览（待完成；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -13,6 +13,7 @@ softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 unifyTd=true
+tdValues=
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
