# InsertMethod.INSERT_LAST=>APPEND ; +ColorForm .ColorPanel_Click添加调试的相关代码；#修复使用素材时《同步状态下无步数》非组内灯具添加步的相关代码；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -13,7 +13,7 @@ softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 unifyTd=true
-tdValues=
+tdValues=193,194,195,196,197,198,199,200,201,202,203,204
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
