--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -13,7 +13,7 @@ softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 unifyTd=true
-tdValues=193,194,195,196,197,198,199,200,201,202,203,204
+tdValues=
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
