#MainFormBase.OneStepPlay 优化完成(大一统stepBytes的生成);#ColorForm抽离selectPanel;完成oneStepPlay()-->调用MainForm.OneStepPlay(Material);

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -7,13 +7,13 @@ oldTools=false
 [Show]
 newMainForm=false
 useSkin=true
-testButton=true
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 unifyTd=true
-tdValues=
+tdValues=11,12,13,14,15,16,17,18,19
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
