--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -184,6 +184,9 @@
     <Compile Include="utils\IDataQueue.cs" />
     <Compile Include="utils\IFileUtils.cs" />
     <Compile Include="utils\impl\LogTools.cs" />
+    <Compile Include="utils\lbdconfigtor\BaseFunctionalModule.cs" />
+    <Compile Include="utils\lbdconfigtor\BaseFunctionalModuleBase.cs" />
+    <Compile Include="utils\lbdconfigtor\NetCommunitor.cs" />
     <Compile Include="utils\StringHelper.cs" />
     <Compile Include="utils\XiaosaTest.cs" />
     <EmbeddedResource Include="MyForm\MainForm2.resx">
