-NewMainForm去掉ShowStepLabel中统一按键可用性的冗余代码；+基本搭建好翻译的框架LanguageHelper（包括Word【内置】和Sentence【百度直接翻译】）的内容；并应用到多个界面中；(还有各个界面的SetNotice和ShowMsg还没写)

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ oldTools=false
 [Show]
 newMainForm=false
 useSkin=false
-testButton=false
+testButton=true
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
@@ -16,6 +16,7 @@ tdValues=1,2,3,4
 useAppPath=false
 otherPath=C:\Temp
 [System]
+language=en-US
 maxStep=100
 maxStepSound=300
 maxStTimes=250
