#基本完成各Form的setNotice及MessageBox的翻译；+StatusLabel.enum（给外设配置的setNotice使用）；+LanguageHelper内添加对sentenceDict排序的方法；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Ast\Entity\ReturnDTO.cs" />
     <Compile Include="Ast\Entity\TranslateResult.cs" />
     <Compile Include="Ast\Enum\InsertMethod.cs" />
+    <Compile Include="Ast\Enum\StatusLabel.cs" />
     <Compile Include="Ast\GroupAst.cs" />
     <Compile Include="Ast\LightWrapper.cs" />
     <Compile Include="Ast\MaterialAst.cs" />
