--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -5,7 +5,7 @@ oldTools=false
 [Show]
 newMainForm=false
 useSkin=false
-testButton=true
+testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
 useExportProject=true
