#StatusLable.enum移到NewToolsForm中；#一些翻译工作的收尾：调试步数、模式、跳渐变、串口0|1等；#重写外设的lightButtons的初始化，并改名switchButtons；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -3,8 +3,8 @@
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=false
-useSkin=false
+newMainForm=true
+useSkin=true
 testButton=false
 hardwareUpdateButton=true
 softwareName=TRANS-JOY
