--- a/RecordTools/RecordTools.csproj
+++ b/RecordTools/RecordTools.csproj
@@ -56,7 +56,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="utils\EditRecordFile.cs" />
+    <Compile Include="test\XiaosaTestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="test\XiaosaTestForm.Designer.cs">
+      <DependentUpon>XiaosaTestForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="utils\EditMusicRecordFile.cs" />
     <EmbeddedResource Include="RecordSetForm.resx">
       <DependentUpon>RecordSetForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -72,6 +78,9 @@
     <Content Include="CommonSet.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="test\XiaosaTestForm.resx">
+      <DependentUpon>XiaosaTestForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
