#灯库编辑器改名为LightEditorForm;#LanguageHelper优化；#其他翻译的相关工作（尚未完成）

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -3,7 +3,7 @@
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
