大更新（抽象了一些通用方法）： #继续优化国际化的代码：包括使用内置动作和快速调色（翻译相关通道名）、各打开框和确认框的文本等；#切换场景、模式；多灯、编组等相关代码的逻辑；#是否可以快速调色的验证代码；

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -11,7 +11,7 @@ softwareName=TRANS-JOY
 useExportProject=true
 saPanels=false
 unifyTd=true
-tdValues=1,2,3,4
+tdValues=
 [SavePath]
 useAppPath=false
 otherPath=C:\Temp
