--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -16,7 +16,7 @@ tdValues=
 useAppPath=false
 otherPath=C:\Temp
 [System]
-language=zh-CN
+language=en
 maxStep=100
 maxStepSound=300
 maxStTimes=250
