--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -492,7 +492,7 @@
     <Compile Include="Utils\ISaveProjectCallBack.cs" />
     <Compile Include="Utils\Ver2\GlobalBean.cs" />
     <Content Include="灯库软件.ico" />
-    <Content Include="Language\en-US.json">
+    <Content Include="Language\en.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\灯光图.png" />
