#MainFormBase优化(StepCounts->TotalStep)、精简部分代码（有个获取当前通道当前StepWrapper的方法重复了）；#精简MaterialAst，去掉无用且冗余的TongdaoCount（可用tdNameList.Count得到）；+添加通用的素材调用Form(素材、动作、颜色)的框架；待完善

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -267,6 +267,12 @@
     <Compile Include="MyForm\Multiplex\GroupForm.Designer.cs">
       <DependentUpon>GroupForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\Multiplex\MaterialForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\Multiplex\MaterialForm.Designer.cs">
+      <DependentUpon>MaterialForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\Multiplex\MultiplexForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -534,6 +540,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\GroupForm.resx">
       <DependentUpon>GroupForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\Multiplex\MaterialForm.resx">
+      <DependentUpon>MaterialForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\Multiplex\MultiplexForm.resx">
       <DependentUpon>MultiplexForm.cs</DependentUpon>
