#基本完成 《多素材合成》及《单灯单步》的代码

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -3,7 +3,7 @@
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=false
+newMainForm=true
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
