--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -3,7 +3,7 @@
 lightEditor=false
 oldTools=false
 [Show]
-newMainForm=true
+newMainForm=false
 useSkin=true
 testButton=false
 hardwareUpdateButton=true
@@ -16,7 +16,7 @@ tdValues=
 useAppPath=false
 otherPath=C:\Temp
 [System]
-language=zh
+language=en
 maxStep=100
 maxStepSound=300
 maxStTimes=250
