#优化《固件升级》和《工程更新》，并把两个Form的path，存放到Settings中（存到系统内）；#去掉《工程更新》必须打开工程才能使用的限制；

--- a/LightController/App.config
+++ b/LightController/App.config
@@ -43,6 +43,12 @@
       <setting name="IsConnectCom" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="xbinPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="exportProjectPath" serializeAs="String">
+        <value />
+      </setting>
     </LightController.Properties.Settings>
   </userSettings>
 </configuration>
