--- a/LightController/Properties/Settings.settings
+++ b/LightController/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="IsConnectCom" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="xbinPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="exportProjectPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
