--- a/MultiLedController/MultiLedController.csproj
+++ b/MultiLedController/MultiLedController.csproj
@@ -187,6 +187,9 @@
     <Compile Include="utils\IFileUtils.cs" />
     <Compile Include="utils\impl\LogTools.cs" />
     <Compile Include="utils\lbdconfigtor\BaseFunctionalModule.cs" />
+    <Compile Include="utils\lbdconfigtor\Conf\CSJConf.cs" />
+    <Compile Include="utils\lbdconfigtor\Conf\HCXConf.cs" />
+    <Compile Include="utils\lbdconfigtor\Conf\IConf.cs" />
     <Compile Include="utils\lbdconfigtor\NetCommunitor.cs" />
     <Compile Include="utils\StringHelper.cs" />
     <Compile Include="utils\XiaosaTest.cs" />
