--- a/LBDConfigTool/LBDConfigTool.csproj
+++ b/LBDConfigTool/LBDConfigTool.csproj
@@ -44,6 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\SerializeUtils.cs" />
+    <Compile Include="ConfForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConfForm.Designer.cs">
+      <DependentUpon>ConfForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +59,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="utils\communication\BaseFunctionalModule.cs" />
     <Compile Include="utils\communication\CSJNetCommunitor.cs" />
     <Compile Include="utils\communication\HCXNetCommunitor.cs" />
@@ -61,6 +69,9 @@
     <Compile Include="utils\crc\CRC16Tools.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConfForm.resx">
+      <DependentUpon>ConfForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
