--- a/LBDConfigTool/LBDConfigTool.csproj
+++ b/LBDConfigTool/LBDConfigTool.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Crc32C.NET, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Crc32C.NET.1.0.5.0\lib\net20\Crc32C.NET.dll</HintPath>
+    </Reference>
     <Reference Include="PacketDotNet, Version=0.13.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Sharp_Pcap.4.2.0\lib\PacketDotNet.dll</HintPath>
     </Reference>
@@ -72,7 +75,8 @@
     <Compile Include="utils\conf\CSJConf.cs" />
     <Compile Include="utils\conf\HCXConf.cs" />
     <Compile Include="utils\conf\IConf.cs" />
-    <Compile Include="utils\crc\CRC16Tools.cs" />
+    <Compile Include="utils\crc\CRC16Tool.cs" />
+    <Compile Include="utils\crc\CRC32Tool.cs" />
     <Compile Include="utils\record\CaptureTool.cs" />
     <Compile Include="utils\record\DMXManager.cs" />
     <EmbeddedResource Include="Form1.resx">
