--- a/LBDConfigTool/packages.config
+++ b/LBDConfigTool/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net40" />
   <package id="Sharp_Pcap" version="4.2.0" targetFramework="net40" />
 </packages>
