--- a/LBDConfigTool/LBDConfigTool.csproj
+++ b/LBDConfigTool/LBDConfigTool.csproj
@@ -77,6 +77,7 @@
     <Compile Include="utils\conf\IConf.cs" />
     <Compile Include="utils\record\CaptureTool.cs" />
     <Compile Include="utils\record\DMXManager.cs" />
+    <Compile Include="utils\test\RecordTest.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
