--- a/LBDConfigTool/app.config
+++ b/LBDConfigTool/app.config
@@ -1,5 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="LBDConfigTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
+    <userSettings>
+        <LBDConfigTool.Properties.Settings>
+            <setting name="ebinPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="fbinPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="relayTime" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="packageSize" serializeAs="String">
+                <value>256</value>
+            </setting>
+            <setting name="abinPath" serializeAs="String">
+                <value />
+            </setting>
+        </LBDConfigTool.Properties.Settings>
+    </userSettings>
 </configuration>
